# static/swagger.json
@@ -8,49 +8,67 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
+  "tags": [
+    {
+      "name": "Requests",
+      "description": "Example API for requesting and return - Rock Paper Scissors"
+    }
+  ],
 "swagger": "2.0",
   "paths": {
     "/api/get-user-list": {
       "get": {
         "summary": "Returns from the database user and their current credits",
+        "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "OK"
+          },
+          "400": {
+            "description": "No users in the database! You need to create one via /api/create-new-user"
+          },
+          "405": {
+            "description": "The method is not allowed for the requested URL. Use GET method."
           }
         }
       }
     },
-    "/api/get-result-from-day": {
+    "/api/get-result-from-day/{date}": {
       "get": {
         "parameters": [
           {
-            "in": "body",
+            "in": "path",
             "name": "date",
-            "description": "date1",
+            "description": "As \"user_id\" value input date in %Y-%m-%d format",
             "required": true,
-            "schema": {
-              "type": "object",
-              "required": ["date"],
-              "properties": {
-                "user_id": {"type": "string"}
-              }
-            }
+            "type": "string"
           }
         ],
-        "summary": "Play game",
+        "summary": "Returns game statistics for the given day",
+        "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "OK"
+          },
+          "400": {
+            "description": "There were no games that day!"
+          },
+          "405": {
+            "description": "The method is not allowed for the requested URL. Use GET method."
           }
         }
       }
     },
-        "/api/create-new-user": {
+    "/api/create-new-user": {
       "post": {
         "summary": "Create a new user",
+        "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "OK"
+          },
+          "405": {
+            "description": "The method is not allowed for the requested URL. Use GET method."
           }
         }
       }
@@ -60,22 +78,30 @@
         "parameters": [
           {
             "in": "body",
-            "name": "user_id",
-            "description": "user_id1",
+            "name": "Play game",
+            "description": "Select the \"Rock\", \"Scissors\" or \"Paper\" and the user_id to play",
             "required": true,
             "schema": {
               "type": "object",
-              "required": ["user_id"],
+              "required": ["user_id", "players_choice"],
               "properties": {
-                "user_id": {"type": "integer"}
+                "user_id": {"type": "integer"},
+                "players_choice": {"type": "string"}
               }
             }
           }
         ],
         "summary": "Play game",
+        "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Returns json with the keys \"result\", \"rng_choice\", \"credits_before_game\", \"credits_after_game\""
+          },
+          "400": {
+            "description": "You don't have enough credits for the next game or you chose bad parameters You can only choose \"Rock\" \"Paper\" \"Scissors\". If you have 0 credits you can recharge them by /api/add-credits-to-user"
+          },
+          "405": {
+            "description": "The method is not allowed for the requested URL. Use GET method."
           }
         }
       }
@@ -86,7 +112,7 @@
           {
             "in": "body",
             "name": "user_id",
-            "description": "user_id1",
+            "description": "As \"user_id\" value enter the id of the user whose credits you want to top up. Only users with 0 credits can top them up.",
             "required": true,
             "schema": {
               "type": "object",
@@ -97,10 +123,20 @@
             }
           }
         ],
-        "summary": "Play game",
+        "summary": "Adding credits for a user with a specific ID",
+        "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Returns json with the keys \"Message\", \"User id\", \"Credits\", \"credits_after_game\"",
+            "schema": {
+
+            }
+          },
+          "400": {
+            "description": "Only 0 credits users can add new credits!"
+          },
+          "405": {
+            "description": "The method is not allowed for the requested URL. Use GET method."
           }
         }
       }
